Case 11 y case 12 terminados